--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -6,5 +6,12 @@
   "email": "Email",
   "passwordResetEmailSent": "Password reset email sent",
   "login": "Login",
-  "noAccountRegister": "No account? Register."
+  "noAccountRegister": "No account? Register.",
+  "Registration": "Registration",
+  "Name": "Name",
+  "registration": "Registration",
+  "name": "Name",
+  "fillInAllFields": "Fill in all fields",
+  "register": "Register",
+  "haveAnAccount": "Already have an account? Login."
 }
