--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -13,5 +13,13 @@
   "name": "Name",
   "fillInAllFields": "Fill in all fields",
   "register": "Register",
-  "haveAnAccount": "Already have an account? Login."
+  "haveAnAccount": "Already have an account? Login.",
+  "settingsTitleAppBar": "Settings",
+  "otherSettings": "Other settings",
+  "profileDetails": "Profile details",
+  "notifications": "Notifications",
+  "darkMode": "Dark mode",
+  "aboutApplication": "About application",
+  "helpfaq": "Help/FAQ",
+  "deactivateMyAccount": "Deactivate my account"
 }
