add edit password, edit navigation logic

--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -19,5 +19,10 @@
   "darkMode": "Dark mode",
   "aboutApplication": "About application",
   "helpfaq": "Help/FAQ",
-  "deactivateMyAccount": "Deactivate my account"
+  "deactivateMyAccount": "Deactivate my account",
+  "changePassword": "Change Password",
+  "editProfile": "Edit profile",
+  "invalidPassword": "Invalid password",
+  "passwordUpdated": "Password updated",
+  "errorUpdatingPassword": "Error Updating Password"
 }
