Create report_selection_page and many more

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -21,5 +21,6 @@
   "darkMode": "Dark mode",
   "aboutApplication": "About application",
   "helpfaq": "Help/FAQ",
-  "deactivateMyAccount": "Deactivate my account"
+  "deactivateMyAccount": "Deactivate my account",
+  "organization": "Organization"
 }
