--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -1,28 +1,31 @@
 {
-  "signIn": "Регистрация",
-  "email": "Email",
-  "passwordResetEmailSent": "Password reset email sent",
-  "login": "Login",
-  "noAccountRegister": "No account? Register.",
-  "Registration": "Registration",
-  "Name": "Name",
-  "registration": "Registration",
-  "name": "Name",
-  "password": "Password",
-  "fillInAllFields": "Fill in all fields",
-  "register": "Register",
-  "haveAnAccount": "Already have an account? Login.",
-  "settingsTitleAppBar": "Settings",
-  "otherSettings": "Other settings",
-  "profileDetails": "Profile details",
-  "notifications": "Notifications",
-  "darkMode": "Dark mode",
-  "aboutApplication": "About application",
-  "helpfaq": "Help/FAQ",
-  "deactivateMyAccount": "Deactivate my account",
-  "changePassword": "Change Password",
-  "editProfile": "Edit profile",
-  "invalidPassword": "Invalid password",
-  "passwordUpdated": "Password updated",
-  "errorUpdatingPassword": "Error Updating Password"
+  "signIn": "Вход",
+  "email": "Электронная почта",
+  "passwordResetEmailSent": "Письмо для сброса пароля отправлено",
+  "login": "Войти",
+  "noAccountRegister": "Нет аккаунта? Зарегистрируйтесь.",
+  "Registration": "Регистрация",
+  "Name": "Имя",
+  "registration": "Регистрация",
+  "name": "Имя",
+  "password": "Пароль",
+  "fillInAllFields": "Заполните все поля",
+  "register": "Зарегистрироваться",
+  "haveAnAccount": "Уже есть аккаунт? Войти.",
+  "settingsTitleAppBar": "Настройки",
+  "otherSettings": "Другие настройки",
+  "profileDetails": "Данные профиля",
+  "notifications": "Уведомления",
+  "darkMode": "Тёмная тема",
+  "aboutApplication": "О приложении",
+  "helpfaq": "Помощь/FAQ",
+  "deactivateMyAccount": "Деактивировать мой аккаунт",
+  "changePassword": "Изменить пароль",
+  "editProfile": "Редактировать профиль",
+  "invalidPassword": "Неверный пароль",
+  "passwordUpdated": "Пароль обновлён",
+  "errorUpdatingPassword": "Ошибка при обновлении пароля",
+  "switchLocales": "Switch locales",
+  "enterNewName": "Enter new name",
+  "enterNewEmail": "Enter new email"
 }
