--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -30,5 +30,28 @@
   "errorUpdatingPassword": "Error Updating Password",
   "switchLocales": "Switch locales",
   "enterNewName": "Enter new name",
-  "enterNewEmail": "Enter new email"
+  "enterNewEmail": "Enter new email",
+  "numPeriod": "Анализ задолженности ($period месяцев)",
+  "debtToCapital": "Отношение долга к собственному капиталу",
+  "structureOfLiabilities": "Структура обязательств",
+  "shortTerm": "Краткосрочные",
+  "debitCapital": "Долг/Кап.",
+  "debtToEquityRatio": "Отношение долга к капиталу",
+  "totalDebt": "Общий долг",
+  "totalLiabilities": "Всего обязательств",
+  "debtAssets": "Долг/Активы",
+  "debtToAssetsRatio": "Доля долга в активах",
+  "longTerm": "Долгосрочные",
+  "coefficient": "Коэффициент",
+  "debtCapital": "Долг/Капитал",
+  "lowDebtBurden": "Низкая долговая нагрузка ✓",
+  "moderateDebtBurden": "Умеренная долговая нагрузка",
+  "highDebtBurden": "Высокая долговая нагрузка ⚠️",
+  "veryHighDebtBurden": "Очень высокая долговая нагрузка ❗",
+  "detailedDebtStatistics": "Детальная статистика задолженности",
+  "period": "Период",
+  "debtCap": "Долг/Кап.",
+  "brieflyMust": "Кратк. обяз.",
+  "debtMust": "Долг. обяз.",
+  "capital": "Капитал"
 }
