--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,57 +1,96 @@
 {
-  "signIn": "SignIn",
-  "forgotPassword": "Forgot Password?",
-  "signInWithGoogle": "Sign in with Google",
-  "password": "Password",
+  "signIn": "Sign In",
   "email": "Email",
   "passwordResetEmailSent": "Password reset email sent",
-  "login": "Login",
+  "login": "Log In",
+  "forgotPassword": "Forgot password?",
+  "signInWithGoogle": "Sign in with Google?",
   "noAccountRegister": "No account? Register.",
   "Registration": "Registration",
   "Name": "Name",
   "registration": "Registration",
   "name": "Name",
+  "password": "Password",
   "fillInAllFields": "Fill in all fields",
   "register": "Register",
-  "haveAnAccount": "Already have an account? Login.",
+  "haveAnAccount": "Already have an account? Sign in.",
   "settingsTitleAppBar": "Settings",
   "otherSettings": "Other settings",
   "profileDetails": "Profile details",
   "notifications": "Notifications",
-  "darkMode": "Dark mode",
+  "darkMode": "Dark theme",
   "aboutApplication": "About application",
   "helpfaq": "Help/FAQ",
   "deactivateMyAccount": "Deactivate my account",
-  "organization": "Organization",
-  "changePassword": "Change Password",
+  "changePassword": "Change password",
   "editProfile": "Edit profile",
   "invalidPassword": "Invalid password",
   "passwordUpdated": "Password updated",
-  "errorUpdatingPassword": "Error Updating Password",
-  "switchLocales": "Switch locales",
+  "errorUpdatingPassword": "Error updating password",
+  "switchLocales": "Change language",
   "enterNewName": "Enter new name",
   "enterNewEmail": "Enter new email",
-  "numPeriod": "Анализ задолженности ($period месяцев)",
-  "debtToCapital": "Отношение долга к собственному капиталу",
-  "structureOfLiabilities": "Структура обязательств",
-  "shortTerm": "Краткосрочные",
-  "debitCapital": "Долг/Кап.",
-  "debtToEquityRatio": "Отношение долга к капиталу",
-  "totalDebt": "Общий долг",
-  "totalLiabilities": "Всего обязательств",
-  "debtAssets": "Долг/Активы",
-  "debtToAssetsRatio": "Доля долга в активах",
-  "longTerm": "Долгосрочные",
-  "coefficient": "Коэффициент",
-  "debtCapital": "Долг/Капитал",
-  "lowDebtBurden": "Низкая долговая нагрузка ✓",
-  "moderateDebtBurden": "Умеренная долговая нагрузка",
-  "highDebtBurden": "Высокая долговая нагрузка ⚠️",
-  "veryHighDebtBurden": "Очень высокая долговая нагрузка ❗",
-  "detailedDebtStatistics": "Детальная статистика задолженности",
-  "period": "Период",
-  "debtCap": "Долг/Кап.",
-  "brieflyMust": "Кратк. обяз.",
-  "debtMust": "Долг. обяз.",
-  "capital": "Капитал"
+  "numPeriod": "Debt analysis ($period months)",
+  "debtToCapital": "Debt to equity ratio",
+  "structureOfLiabilities": "Liabilities structure",
+  "shortTerm": "Short-term",
+  "debitCapital": "Debt/Cap.",
+  "debtToEquityRatio": "Debt to equity ratio",
+  "totalDebt": "Total debt",
+  "totalLiabilities": "Total liabilities",
+  "debtAssets": "Debt/Assets",
+  "debtToAssetsRatio": "Debt to assets ratio",
+  "longTerm": "Long-term",
+  "coefficient": "Coefficient",
+  "debtCapital": "Debt/Capital",
+  "lowDebtBurden": "Low debt burden ✓",
+  "moderateDebtBurden": "Moderate debt burden",
+  "highDebtBurden": "High debt burden ⚠️",
+  "veryHighDebtBurden": "Very high debt burden ❗",
+  "detailedDebtStatistics": "Detailed debt statistics",
+  "period": "Period",
+  "debtCap": "Debt/Cap.",
+  "brieflyMust": "Short-term oblig.",
+  "debtMust": "Long-term oblig.",
+  "capital": "Capital",
+  "welcome": "Welcome,",
+  "noReports": "No reports for the previous period",
+  "lastReportingPeriod": "Last reporting period",
+  "keyFinancialIndicators": "📊 Key financial indicators",
+  "revenue": "Revenue",
+  "netProfit": "Net profit",
+  "costPrice": "Cost of goods sold",
+  "cashFlow": "Cash flow",
+  "liquidityIndicators": "💧 Liquidity indicators",
+  "currentLiquidity": "Current liquidity",
+  "fastLiquidity": "Quick liquidity",
+  "normCurrentLiquidity": "Norm: > 2.0",
+  "normFastLiquidity": "Norm: > 1.0",
+  "profitability": "📈 Profitability",
+  "returnOnAssets": "Return on assets",
+  "returnOnCapital": "Return on capital",
+  "financialStability": "🏦 Financial stability",
+  "normDebtCapital": "Norm: < 1.0",
+  "financialAnalysis": "Financial analysis",
+  "periodMonth": "$period months",
+  "liquidity": "Liquidity",
+  "arrears": "Debt",
+  "liquidityAnalysisPeriodMonths": "Liquidity analysis ($period months)",
+  "liquidityRatios": "Liquidity ratios",
+  "techLiquor": "Curr. liq.",
+  "currentLiquidityRatio": "Current ratio",
+  "fastLiquor": "Quick liq.",
+  "quickLiquidityRatio": "Quick ratio",
+  "detailedLiquidityStatistics": "Detailed liquidity statistics",
+  "cashResources": "Cash",
+  "techAssets": "Current assets",
+  "profitabilityAnalysisPeriodMonths": "Profitability analysis ($period months)",
+  "returnOnAssetsAndCapital": "Return on assets and capital (%)",
+  "profitMargin": "Profit margin (%)",
+  "GrossMargin": "Gross margin",
+  "netMargin": "Net margin",
+  "margin": "Margin",
+  "detailedStatistics": "Detailed statistics",
+  "grossMargin": "Gross margin (%)",
+  "profit": "Profit"
 }
