--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -3,6 +3,8 @@
   "email": "Электронная почта",
   "passwordResetEmailSent": "Письмо для сброса пароля отправлено",
   "login": "Войти",
+  "forgotPassword": "Забыли пароль?",
+  "signInWithGoogle": "Войти через гугл?",
   "noAccountRegister": "Нет аккаунта? Зарегистрируйтесь.",
   "Registration": "Регистрация",
   "Name": "Имя",
@@ -25,9 +27,9 @@
   "invalidPassword": "Неверный пароль",
   "passwordUpdated": "Пароль обновлён",
   "errorUpdatingPassword": "Ошибка при обновлении пароля",
-  "switchLocales": "Switch locales",
-  "enterNewName": "Enter new name",
-  "enterNewEmail": "Enter new email",
+  "switchLocales": "Изменить язык",
+  "enterNewName": "Введите новое имя",
+  "enterNewEmail": "Введите новый email",
   "numPeriod": "Анализ задолженности ($period месяцев)",
   "debtToCapital": "Отношение долга к собственному капиталу",
   "structureOfLiabilities": "Структура обязательств",
@@ -50,5 +52,45 @@
   "debtCap": "Долг/Кап.",
   "brieflyMust": "Кратк. обяз.",
   "debtMust": "Долг. обяз.",
-  "capital": "Капитал"
+  "capital": "Капитал",
+  "welcome": "Добро пожаловать,",
+  "noReports": "Нет отчетов за предыдущий период",
+  "lastReportingPeriod": "Последний отчетный период",
+  "keyFinancialIndicators": "📊 Основные финансовые показатели",
+  "revenue": "Выручка",
+  "netProfit": "Чистая прибыль",
+  "costPrice": "Себестоимость",
+  "cashFlow": "Денежный поток",
+  "liquidityIndicators": "💧 Показатели ликвидности",
+  "currentLiquidity": "Текущая ликвидность",
+  "fastLiquidity": "Быстрая ликвидность",
+  "normCurrentLiquidity": "Норма: > 2.0",
+  "normFastLiquidity": "Норма: > 1.0",
+  "profitability": "📈 Рентабельность",
+  "returnOnAssets": "Рентабельность активов",
+  "returnOnCapital": "Рентабельность капитала",
+  "financialStability": "🏦 Финансовая устойчивость",
+  "normDebtCapital": "Норма: < 1.0",
+  "financialAnalysis": "Финансовый анализ",
+  "periodMonth": "$period месяцев",
+  "liquidity": "Ликвидность",
+  "arrears": "Задолженность",
+  "liquidityAnalysisPeriodMonths": "Анализ ликвидности ($period месяцев)",
+  "liquidityRatios": "Коэффициенты ликвидности",
+  "techLiquor": "Тек. ликв.",
+  "currentLiquidityRatio": "Коэффициент текущей ликвидности",
+  "fastLiquor": "Быстр. ликв.",
+  "quickLiquidityRatio": "Коэффициент быстрой ликвидности",
+  "detailedLiquidityStatistics": "Детальная статистика ликвидности",
+  "cashResources": "Денежные средства",
+  "techAssets": "Тек. активы",
+  "profitabilityAnalysisPeriodMonths": "Анализ рентабельности ($period месяцев)",
+  "returnOnAssetsAndCapital": "Рентабельность активов и капитала (%)",
+  "profitMargin": "Маржа прибыли (%)",
+  "GrossMargin": "Валовая маржа",
+  "netMargin": "Чистая маржа",
+  "margin": "Маржа",
+  "detailedStatistics": "Детальная статистика",
+  "grossMargin": "Вал. маржа (%)",
+  "profit": "Прибыль"
 }
